-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.4, Some future release
-
-
64c1fbe96c68b1286a70242ff4922be140128cb2 (qt/qtdeclarative/dev)
the when property in State element doesn't accept values such as true, false and 1.
import QtQuick 2.12 State { when: true }
when.qml:4 Invalid property assignment: unsupported type "QQmlBinding*"
Note that it accepts JavaScript code like 1+1.
| For Gerrit Dashboard: QTBUG-76838 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 266816,1 | Fix Invalid property assignment: error in State | dev | qt/qtdeclarative | Status: ABANDONED | -1 | 0 |
| 266870,3 | use boolean for when property | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |