use boolean for when property

QQuickState used to store "when" as a QQmlBinding to reduce state
oscillation.

It is unclear whether this is still an issue, but it breaks if a user
sets "when" to a primitive value like "true" or "1".

Fixes: QTBUG-76838
Change-Id: If400e5b1283687838ed252be2dfa52067f44564e
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>